src/sass/water_for_the_environment.scss
@charset "utf-8";
// Classes specific to Environmental Water content type pages
body.node-type-ew-pages {
  .no-float {
    float: none;
  }

  svg {
    margin-bottom: 0;
  }

  .field-name-body, .banner .subtitle {
    font-size: 1.26667rem;
    line-height: 1.6;
  }

  .field-name-field-ew-pb-text,
  .field-name-field-ew-pb-more-link {
    margin-bottom: 1em;
  }

  // Sub-navigation menu
  .ew-navigation {
    background-color: #EBEBEB;

    .menu-name-menu-environmental-water {
      .menu {
        list-style: none;
        display: table;

        li {
          display: table-cell;
          padding: 0;
          border-left: 1px solid #D9D9D9;

          &:last-of-type {
            border-right: 1px solid #D9D9D9;
          }

          a {
            text-align: center;
            padding: 20px 10px 16px 10px;
            border-bottom: 3px solid transparent;
            line-height: 1;
            display: table-cell;
            text-decoration: none;
            color: #5F6062;
          }

          &.active-trail.active {
            background: #fff;

            a {
              border-bottom-color: #00A18E;
              color: #00A18E;
            }
          }

          &:hover {
            background: #fff;

            a {
              border-bottom-color: #00A18E;
              color: #00A18E;
            }
          }
        }
      }
    }
  }

  .field-name-field-ew-pb-more-link a {
    text-decoration: none;
    font-weight: 600;
    line-height: 1;
    padding-right: 18px;
    position: relative;
    text-align: inherit;

    &::after {
      content: "e";
      font-family: "untitled-font-1" !important;
      position: absolute;
      top: auto;
      font-size: inherit;
      -webkit-transform: translateY(0%);
      -ms-transform: translateY(0%);
      transform: translateY(0%);
      line-height: 1 !important;
      display: inline;
      right: 0;
      bottom: 2px;
    }
  }

  .field-name-field-ew-optional-components {
    background: #172B54 url(../img/bg_wave_pattern.png);
    background-repeat: repeat-y;
    background-position-x: 50%;

    h2 {
      padding: 50px 0 40px;
      margin: 0 !important;
    }

    .bg-white {
      background: #fff;
    }

    // Classes specific to Environmental Water Optional Component paragraph bundle
    .paragraphs-item-environmental-water-highlights {
      h2 {
        text-align: center;
        color: #fff;
        margin-top: 25px;
      }

      .row-wrapper {
        float: left;
        background: #fff;
        margin: 0 0 30px 15px;

        .col-left {
          padding-left: 0;
          height: 170px;
          img {
            min-height: 170px;
            object-fit: cover;
          }
        }

        .col-right {
          padding-top: 20px;
          padding-bottom: 15px;
          height: 170px;

          h3 {
            color: #00A0DD;
            font-size: 16px;
            text-transform: uppercase;
          }
        }
      }
    }

    .paragraphs-item-ew-optional-component {
      padding: 25px 0;

      .field-name-field-ew-pb-icon-image {
        img {
          width: 300px;
          height: auto;
        }
      }

      .col-left {
        .field-name-field-ew-pb-icon-image {
          margin-top: -50px;
        }
      }

      .col-right {
        h2 {
          padding: 0 0 40px;
        }
      }

    }

    .ew-slider {
      background: #fff;
      padding-bottom: 30px;
      margin-top: 25px;

      h2 {
          display: block;
          text-align: center;
      }

      img {
        margin-bottom: 0;
      }

      .slick-slide {
        transform: scale(0.85);
      }

      .slick-slide.slick-active {
        transform: scale(1);
        -webkit-transition: transform .5s ease-in-out;

        .ew-slide-caption {
          display: block;
          text-align: center;
          padding: 15px 30px 0 30px;
        }
      }

      .slick-slider {

        img {
          border-radius: 5px;
        }

        .ew-slide-caption {
          display: none;
        }
      }

      .slick-list {
        padding-bottom: 50px !important;
      }

      .slick-prev, .slick-next {
        z-index: 99;
        top: calc(50% - 25px);

        &:before {
          font-size: 50px;
        }
      }

      .slick-prev {
        left: 50px;
      }

      .slick-next {
        right: 75px;
      }

      .slick-dots {
        bottom: -5px;

        li button:before {
          font-size: 16px;
          opacity: 1;
          color: #fff;
          -webkit-text-stroke-width: 2px;
          -webkit-text-stroke-color: #1C2C51;
        }

        li.slick-active button:before {
          color: #007FB9;
        }
      }
    }

    .text-image {
      float: left;
      padding: 0;
      margin-top: 25px;

      h2 {
        padding-top: 0;
        padding-bottom: 25px;
      }

      .col-left {
        height: 480px;
        position: relative;

        .col-left-inner {
          max-width: 650px;
          padding-right: 120px;
          position: absolute;
          top: 30%;
          right: 0;
        }

        background-image: url(../img/bg_blue_waves.png);
        background-size: cover;
        color: #fff;
      }

      .col-right {
        padding-left: 0;
        padding-right: 0;
        height: 480px;
        overflow: hidden;
        position: relative;

        img {
          position: absolute;
          bottom: 0;
        }
      }
    }

    .media-embed {
      background-image: url(../img/bg_media_embed.png);
      background-size: cover;
      padding: 50px 0;

      h2 {
        padding-top: 0;
      }

      .field-name-field-ew-pb-embedded-media {
        padding-bottom: 50px;

        iframe {
          width: 100%;
          height: 578px;
          border-radius: 5px;
        }

        .media-credit {
          font-size: 0.9em;
          text-align: center;
          padding: 15px 0;
          color: #7A7070;
        }
      }

    }
  }

  /*
 * Responsive styles
 */

  // Tablet
  @media (max-width: 1024px) {
    // Sub-navagation
    .ew-navigation {
      .container {
        padding: 0;
      }
    }

    // Optional components field
    .field-name-field-ew-optional-components {

      .text-image {

        .col-left {
          height: 250px;

          .col-left-inner {
            padding: 0 30px;
            top: 30px;
          }
        }
        .col-right {
          height: 250px;
        }
      }

      .media-embed {
        padding: 25px 0;

        .field-name-field-ew-pb-embedded-media {
          iframe {
            height: 415px;
          }
          padding-bottom: 25px;
        }
      }
    }
  }

  @media (min-width: 1025px) {
    .text-image {
      .col-right {
        img {
          min-height: 510px;
          object-fit: cover;
        }
      }
    }
  }

  // Mobile phone
  @media (max-width: 600px) {
    // Optional components field
    .field-name-field-ew-optional-components {

      .paragraphs-item-environmental-water-highlights {

        .row-wrapper {
          margin: 0px 0 30px 0px;

          .col-left {
            padding-left: 0;
            width: auto;
            padding-right: 0;
            max-height: 170px;
            overflow: hidden;

            img {
              min-width: 345px;
              object-fit: cover;
            }
          }

          .col-right {
            height: auto;
          }
        }
      }

      .text-image {
        .col-left {
          height: 320px;

          .col-left-inner {
            padding: 0 30px;
            top: 20%;
          }
        }
        .col-right {
          height: 200px;
        }
      }

      .paragraphs-item-ew-optional-component .field-name-field-ew-pb-icon-image {
        width: 100%;
        text-align: center;

        img {
          width: 150px;
        }
      }

      .media-embed {
        padding: 25px 0;

        .field-name-field-ew-pb-embedded-media {
          iframe {
            height: 195px;
          }
          padding-bottom: 25px;
        }
      }
    }

    // Sub-navagation
    .ew-navigation {
      .container {
        padding: 0;

        .menu-name-menu-environmental-water {
          .menu {
            display: block;

            li {
              display: block;
              border-left: none;
              border-bottom: 1px solid #D9D9D9;

              &:last-of-type {
                border-right: none;
              }

              a {
                padding: 10px 15px 8px;
                display: block;
                text-align: left;
              }
            }
          }
        }
      }
    }
  }

  // Data visualisation
  @import 'visualisation/variables';
  @import 'visualisation/base';
  @import 'visualisation/mixin';
  @import 'visualisation/water-through-time';
  @import 'visualisation/whos-who';
  @import 'visualisation/report-card';
  @import 'visualisation/water-summary';
  @import 'visualisation/water-use';
  @import 'visualisation/our-progress';
  @import 'visualisation/environmental-strategies';
  @import 'visualisation/responsive';

  ul.dates {
    li {
      margin-bottom: 0;
    }
  }

  .water-summary {
    background: #fff;

    h2 {
      margin-bottom: 25px;
      padding-top: 0;
    }

    .water-use {
      hr {
        margin-bottom: 15px !important;
        padding-bottom: 0;
      }
    }
  }

  #water-through-time {
    background: #fff;

    svg {
      margin-bottom: 0;
      height: 20px !important;
    }
  }

  .whos-who .whos-who-river .item .ww-footer svg {
    height: 16px !important;
  }

  .our-progress {
    background: #fff;
    text-align: center;
    margin-bottom: -6px;

    h2 {
      padding-top: 25px;
    }
  }

  .environmental-strategies-wrapper {
    background: #fff;
    padding-bottom: 25px;
  }

  .report-card-wrapper {
    background-color: #f0ede8;

    .report-card {
      th {
        background: #f0ede8;
        color: #191919;
        text-align: center;
      }
      .table-scroll table tbody td {
        text-align: center;
      }
    }
  }
}

